--- a/WebContent/css/menu.css
+++ b/WebContent/css/menu.css
@@ -1,12 +1,73 @@
 @charset "UTF-8";
+
+.ul {
+	width: 800px;
+	height: 30px;
+	background: #7BC4FF;
+	list-style: none;
+	padding: 5px
+}
+
+.li {
+	float: left;
+	margin-right: 10px;
+	position: relative;
+	left: +30%
+}
+
+.a {
+	font-size: 12px;
+	color: white;
+	text-decoration: none
+}
+
+.bul{
+	background:#7BC4FF;
+	width:100px;
+	height:700px
+}
+.li1{
 	
-	ul{width:800px; height:30px; background:#7BC4FF; list-style:none; padding:5px}
-	ul li{float:left; margin-right:10px; position:relative; left:+30%}					
-	ul li a{font-size:12px; color:white; text-decoration:none}
-	h1, h2, h3 {color:#5AABED}
-	table {border-collapse:collapse; border-top: 3px solid #5AABED; border-bottom: 2px solid #5AABED}
-	th {border-bottom: 1px solid #5AABED; background:#E3F2FE}
-	td {border-bottom: 1px solid #5AABED; height:30px;}
-	tr:hover {background:#C3E5FF}
-	div {background:#F0F8FE}
-	#footer {width:800px; background:#7bc4ff; color:white}
+	list-style: none;
+	margin-bottom: 10px;
+	position: relative;
+	left: -20%
+}
+.a1 {
+	text-decoration: none;
+	color: white;
+	
+}
+h1, h2, h3 {
+	color: #5AABED
+}
+
+table {
+	border-collapse: collapse; 
+	border-top: 3px solid #5AABED;
+	border-bottom: 2px solid #5AABED
+}
+
+th {
+	border-bottom: 1px solid #5AABED;
+	background: #E3F2FE
+}
+
+td {
+	
+	border-bottom: 1px solid #5AABED;
+}
+
+tr:hover {
+	background: #C3E5FF
+}
+
+div {
+	background: #F0F8FE
+}
+
+#footer {
+	width: 800px;
+	background: #7bc4ff;
+	color: white
+}
